@@ -43,6 +43,8 @@
             Update process.ENV.EXPORTS to bring it in line with what the compiler uses
             Now set 'this' correctly for Arrow Functions
             Add ES6 classes and 'super'
+            nRF5x: Move more bluetooth events to event queue (reducing MEMORY_BUSY issues)
+            Fix potential issue where EV_TYPE_MASK enum could be set incorrectly 
   
      1v95 : nRF5x: Swap to UART fifo to avoid overrun errors at high baud rates
             Ensure Exceptions/errors are reported on a blank line
